--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Streamdata Gallery
 url: google-translate.api.streamdata.gallery
-tag: Temmplate
+tag: Google Translate
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
 github_user: streamdata-gallery-organizations
